<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/string_about" />
        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/ic_update"
            android:title="@string/string_check_update" />
        <!--<item-->
            <!--android:id="@+id/nav_backup"-->
            <!--android:icon="@drawable/ic_backup"-->
            <!--android:title="@string/string_backup" />-->
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/string_setting" />
    </group>
</menu>