<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".addedit.AddEventActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        tools:ignore="UselessParent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/eventImage"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:scaleType="centerCrop"
                    android:src="@drawable/default_background"
                    android:transitionName="image" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp"
                        android:text="@string/string_image_type"
                        android:textSize="16sp" />

                    <RadioGroup
                        android:id="@+id/picTypeRadioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/picRadio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:buttonTint="@color/colorPrimary"
                            android:checked="true"
                            android:text="@string/string_image_type" />
                        <RadioButton
                            android:id="@+id/colorRadio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:buttonTint="@color/colorPrimary"
                            android:checked="false"
                            android:text="@string/string_color_type" />
                    </RadioGroup>
                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/string_type"
                    android:textSize="16sp" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none">

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/commemorationRadio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:buttonTint="@color/colorPrimary"
                            android:checked="true"
                            android:text="@string/string_commemoration" />

                        <RadioButton
                            android:id="@+id/countRadio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:buttonTint="@color/colorPrimary"
                            android:checked="false"
                            android:text="@string/string_countdays" />

                        <RadioButton
                            android:id="@+id/birthdayRadio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:buttonTint="@color/colorPrimary"
                            android:text="@string/string_birthday" />

                        <RadioButton
                            android:id="@+id/lunarBirthdayRadio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:buttonTint="@color/colorPrimary"
                            android:text="@string/string_lunarbirthday" />

                    </RadioGroup>
                </HorizontalScrollView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/string_writeevent"
                    android:textSize="16sp" />

                <com.chaychan.viewlib.PowerfulEditText
                    android:id="@+id/eventEdit"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:background="@color/white"
                    android:gravity="top"
                    android:hint="@string/string_edit"
                    android:maxLines="6"
                    android:padding="16dp"
                    android:textSize="16sp"
                    app:funcType="canClear" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/string_pintop"
                    android:textSize="16sp" />

                <Switch
                    android:id="@+id/isPinnedSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dateLayout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/string_date"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/eventDateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/string_choosedate"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>



</LinearLayout>